--- a/app/globals.css
+++ b/app/globals.css
@@ -79,6 +79,17 @@ body {
 @keyframes fadeInSlide {
   0% {
     opacity: 0;
+    transform: translateX(-10px);
+  }
+  100% {
+    opacity: 1;
+    transform: translateX(0px);
+  }
+}
+
+@keyframes fadeInSlideDesktop {
+  0% {
+    opacity: 0;
     transform: translateX(100px);
   }
   100% {
